// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button button type 1`] = `
"<button class=\\"el-button el-button--primary\\"></button>
"
`;

exports[`Button click event 1`] = `
"<button class=\\"el-button el-button--primary\\"><span>Load</span></button>
"
`;

exports[`Button click event 2`] = `
"<button class=\\"el-button el-button--default is-loading\\">
  <i class=\\"el-icon-loading\\"></i>
  <span>Loading...</span>
</button>
"
`;

exports[`Button empty button 1`] = `
"<button class=\\"el-button el-button--default\\"></button>
"
`;

exports[`Button icon 1`] = `
"<button class=\\"el-button el-button--default\\">
  <i class=\\"el-icon-edit\\"></i>
</button>
"
`;

exports[`Button loading 1`] = `
"<button class=\\"el-button el-button--default is-loading\\">
  <i class=\\"el-icon-loading\\"></i>
</button>
"
`;

exports[`Button text and default color 1`] = `
"<button class=\\"el-button el-button--default\\">
  <span>Default Button</span>
</button>
"
`;

exports[`ButtonGroup button group with buttons 1`] = `
"<div class=\\"el-button-group\\">
  <button class=\\"el-button el-button--primary\\">
    <i class=\\"el-icon-edit\\"></i>
  </button>
  <button class=\\"el-button el-button--primary\\">
    <i class=\\"el-icon-share\\"></i>
  </button>
</div>
"
`;

exports[`ButtonGroup empty button group 1`] = `
"<div class=\\"el-button-group\\"></div>
"
`;
